--- a/fortuna/index.html
+++ b/fortuna/index.html
@@ -24,7 +24,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
-  <link rel="preload" href="assets/audio/ambient.mp3" as="audio" type="audio/mpeg">
+  <!-- <link rel="preload" href="assets/audio/ambient.mp3" as="fetch" type="audio/mpeg" crossorigin> -->
   <link rel="stylesheet" href="scr/styles/index.css">
 </head>
 <body>
